# PFC3-GRUPO5

./: .dockerignore  .env.example  .gitignore  AFAPA WAHA.json  Dockerfile  Dockerfile.backend  README.md  docker-compose.yml  prod-docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
ModelWampis/: Dockerfile  README.md  app.py
ModelWampis/glossary/: glossary-wampis.json
app/: main.py
app/api/envs/: __init__.py  env.py
app/api/models/: auth.py  chats.py  health.py  interactions.py  presence.py  system.py  users.py  webhooks.py
app/api/v1/: auth.py  chats.py  health.py  interactions.py  presence.py  system.py  users.py  webhooks.py
app/config/: __init__.py  security.py
app/database/: __init__.py  connection.py  models.py  seeder.py
app/middleware/: __init__.py  error_handler.py  rate_limiting.py  security.py
app/services/: cache.py  waha_client.py
app/utils/: __init__.py  logging_config.py
model/qnia/: README.md  added_tokens.json  config.json  special_tokens_map.json
scripts/: download_model.py
src/app/: main.py
src/app/api/v1/: health.py  translate.py  wampis_translate.py
src/app/core/: model_loader.py
src/app/utils/: tokenizer_fix.py
tests/: .env.test  __init__.py  conftest.py  test_auth.py  test_cache.py
