[project]
name = "pfc3-grupo5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "certifi==2025.10.5",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.118.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydantic-settings==2.11.0",
    "pyjwt==2.10.1",
    "pymongo==4.15.3",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "sniffio==1.3.1",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uvicorn==0.37.0",
    "websockets==15.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-benchmark==5.1.0",
    "pytest-cov==7.0.0",
    "pytest-html==4.1.1",
    "pytest-metadata==3.1.1",
    "pytest-mock==3.15.1",
    "pytest-xdist==3.8.0",
    "black==25.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "coverage==7.11.0",
    "execnet==2.1.1",
    "factory-boy==3.3.3",
    "faker==37.12.0",
    "fastapi-cli==0.0.13",
    "fastapi-cloud-cli==0.3.1",
    "freezegun==1.5.5",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "memory-profiler==0.61.0",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "psutil==7.1.2",
    "py-cpuinfo==9.0.0",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytokens==0.2.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "responses==0.25.8",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.0",
    "sentry-sdk==2.41.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "typer==0.19.2",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "watchfiles==1.1.0",
]
